--- a/front-end/pubspec.yaml
+++ b/front-end/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
+  go_router: ^9.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
