--- a/tpt2-backend/serverless.yml
+++ b/tpt2-backend/serverless.yml
@@ -10,4 +10,9 @@ functions:
   api:
     handler: index.handler
     events:
-      - httpApi: '*'
+      - httpApi: 
+          path: '/'
+          method: ANY
+      - httpApi: 
+          path: '/path'
+          method: GET
