AV-Tano "google signin with express & serverless"

--- a/tpt2-backend/serverless.yml
+++ b/tpt2-backend/serverless.yml
@@ -11,8 +11,6 @@ functions:
     handler: index.handler
     events:
       - httpApi: 
-          path: '/'
-          method: ANY
-      - httpApi: 
-          path: '/path'
-          method: GET
+          path: '/api/google-signin'
+          method: POST
+          
