--- a/tpt2-backend/package.json
+++ b/tpt2-backend/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.1.0",
     "serverless-http": "^3.1.1"
   }
 }
